email/1.4/modules/ROOT/pages/email-documentation.adoc
= Email Connector Reference 1.4 - Mule 4
:page-aliases: connectors::email/email-documentation.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Email (Email Connector ) is used to list and send emails and perform operations in different mailboxes, such as `delete` and `mark as read`.

Email Connector supports the SMTP, SMTPS, IMAP, IMAPS, POP3, and POP3s protocols.

== Configurations

[[imap]]
=== IMAP


Configuration for operations that are performed through the IMAP (Internet Message Access Protocol) protocol.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<imap_imap, IMAP Connection>>
* <<imap_imaps, IMAPS Connection>>
 | The connection types to provide to this configuration. | | x
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments |  `NAME` |
| Eagerly Fetch Content a| Boolean |  Indicates whether to open and read the retrieved emails. The default value is "true". |  true |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances when as appropriate. |  |
|===

=== Connection Types

[[imap_imap]]
=== IMAP Connection

A connection provider that returns instances of IMAP-based mailbox connections.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A Time Unit that qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes | `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Read Timeout a| Number |  The socket read timeout value. This attribute works in tandem with `timeoutUnit`.  |  `5` |
| Write Timeout a| Number |  The socket write timeout value. This attribute works in tandem with `timeoutUnit`.  |  `5` |
| Host a| String |  Host name of the mail server. |  | x
| User a| String |  Username used to connect with the mail server. |  |
| Password a| String |  Username password to connect with the mail server. |  |
| Port a| String |  The port number of the mail server.  |  `993` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

[[imap_imaps]]
=== IMAPS Connection


A connection provider that returns instances of IMAPs (secure) based mailbox connections.

The returned connection is secured by TLS.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session. |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes.  | `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`.  |  `5` |
| Read Timeout a| Number |  The socket read timeout value. This attribute works in tandem with #timeoutUnit. |  `5` |
| Write Timeout a| Number |  The socket write timeout value. This attribute works in tandem with #timeoutUnit  |  `5` |
| Host a| String |  Host name of the mail server |  | x
| User a| String |  Username used to connect with the mail server |  |
| Password a| String |  Username password to connect with the mail server |  |
| Port a| String |  The port number of the mail server  |  `993` |
| TLS Configuration a| <<Tls>> |  TLS Configuration for the secure connection of the IMAPS protocol |  | x
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

== Operations
* <<delete>>
* <<expungeFolder>>
* <<listImap>>
* <<markAsDeleted>>
* <<markAsRead>>

=== Associated Sources
* <<listener-imap>>

[[pop3]]
=== POP3

Configuration for operations that are performed through the POP3 (Post Office Protocol 3) protocol.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<pop3_pop3, POP3 Connection>>
* <<pop3_pop3s, POP3S Connection>>
 | The connection types to provide to this configuration | | x
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments |  `NAME` |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances when appropriate. |  |
|===

=== Connection Types

[[pop3_pop3]]
===== POP3 Connection

A connection provider that returns instances of POP-based mailbox connections.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes.  |  `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Read Timeout a| Number |  The socket `read` timeout value. This attribute works in tandem with `timeoutUnit`.  |  `5` |
| Write Timeout a| Number |  The socket `write` timeout value. This attribute works in tandem with `timeoutUnit`.  |  `5` |
| Host a| String |  Host name of the mail server. |  | x
| User a| String |  Username used to connect with the mail server. |  |
| Password a| String |  Username password to connect with the mail server. |  |
| Port a| String |  The port number of the mail server. |  `110` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

[[pop3_pop3s]]
===== POP3S Connection

A connection provider that returns instances of POP3s (secured) based mailbox connections. The returned connection is secured by TLS.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes. |  `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Read Timeout a| Number |  The socket read timeout value. This attribute works in tandem with `timeoutUnit`. |  `5`|
| Write Timeout a| Number |  The socket write timeout value. This attribute works in tandem with `timeoutUnit`. | `5` |
| Host a| String |  Host name of the mail server |  | x
| User a| String |  Username used to connect with the mail server |  |
| Password a| String |  Username password to connect with the mail server |  |
| Port a| String |  The port number of the mail server  |  `995` |
| TLS Configuration a| <<Tls>> |  TLS configuration for the secure connection of the POP3S protocol |  | x
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

=== Supported Operations
* <<listPop3>>

==== Associated Sources
* <<listener-pop3>>

---
[[smtp]]
=== SMTP

Configuration for operations that are performed through the SMTP (Simple Mail Transfer Protocol) protocol.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<smtp_smtp, SMTP Connection>>
* <<smtp_smtps, SMTPS Connection>>
 | The connection types to provide to this configuration. | | x
| From a| String |  The "From" address of the message sender |  |
| Default Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the Mule configuration is used. |  |
| Default Content Transfer Encoding a| String |  |  |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances when appropriate. |  |
|===

==== Connection Types
[[smtp_smtp]]
===== SMTP Connection

A connection provider that returns instances of SMTP-based sender connections.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit that qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes. |  `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Read Timeout a| Number |  The socket read timeout value. This attribute works in tandem with `timeoutUnit`.  | `5` |
| Write Timeout a| Number |  The socket write timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Host a| String |  Host name of the mail server. |  | x
| User a| String |  Username used to connect with the mail server. |  |
| Password a| String |  Username password to connect with the mail server. |  |
| Port a| String |  The port number of the mail server. |  `25` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

[[smtp_smtps]]
===== SMTPS Connection


A connection provider that returns instances of SMTPS-based mailbox connections. The returned connection is secured by TLS.


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Properties a| Object |  An additional set of custom properties to configure the connection session |  |
| Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit which qualifies the `connectionTimeout`, `writeTimeout` and `readTimeout` attributes.  |  `SECONDS` |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Read Timeout a| Number |  The socket read timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Write Timeout a| Number |  The socket write timeout value. This attribute works in tandem with `timeoutUnit`. |  `5` |
| Host a| String |  Host name of the mail server. |  | x
| User a| String |  Username used to connect with the mail server. |  |
| Password a| String |  Username password to connect with the mail server. |  |
| Port a| String |  The port number of the mail server. |  `465` |
| TLS Configuration a| <<Tls>> |  TLS Configuration for the secure connection of the SMTPS protocol |  | x
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===

=== Supported Operations
* <<send>>


=== Operations

[[delete]]
=== Delete
`<email:delete>`


Deletes the email with the specified email ID from the mailbox.

For IMAP mailboxes, all the messages scheduled for deletion (marked as `DELETED`) are also erased from the folder.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Mailbox Folder a| String |  Mailbox folder from which to delete the emails |  `INBOX` |
| Email ID a| Number |  Email ID Number of the email to delete |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<imap>>

==== Throws
* EMAIL:EMAIL_NOT_FOUND
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY
* EMAIL:RETRY_EXHAUSTED


[[expungeFolder]]
=== Expunge Folder
`<email:expunge-folder>`


Deletes all the messages scheduled for deletion with the `DELETED` flag set from the mailbox.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Mailbox Folder a| String |  Mailbox folder where the emails with the `DELETED` flag are scheduled to be permanently deleted |  `INBOX` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<imap>>

==== Throws
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY
* EMAIL:RETRY_EXHAUSTED


[[listImap]]
=== List - IMAP
`<email:list-imap>`


List all the emails (with pagination) in the configured IMAP mailbox folder that matches with the specified IMAP matcher criteria.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Mailbox Folder a| String |  Mailbox folder from which to fetch the emails |  `INBOX` |
| Match with a| <<imap-matcher>> |  Email Matcher that gives the capability of filtering the retrieved emails |  |
| Delete After Retrieve a| Boolean |  Specifies whether to delete the returned emails after they are retrieved |  `false` |
| Page Size a| Number |  Size of the page used by the Paging Provider implementation for fetching the emails from the IMAP server | `10` |
| Limit a| Number |  Maximum number of emails retrieved by the operation. Take into account that this limit applies only to the emails effectively retrieved by the operation (the emails that match the IMAPEmailPredicateBuilder criteria) and doesn't imply any restrictions for the amount of emails that are retrieved from the mailbox server. |  `-1` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior. |  |
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments | `NAME` |
| Target Variable a| String |  The name of a variable to store the operation's output |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the *Target Variable* |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<StoredEmailContent>>] payload and [<<IMAPEmailAttributes>>] attributes
|===

=== For Configurations
* <<imap>>

==== Throws
* EMAIL:EMAIL_LIST
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY


[[markAsDeleted]]
=== Mark As Deleted
`<email:mark-as-deleted>`


Marks an incoming email as `DELETED`. Emails that are marked for deletion are scheduled for deletion when the folder closes, which means that the email is not physically eliminated from the mailbox folder, but its state changes.  All emails that are marked as `DELETED` are eliminated from the mailbox when `IMAPOperations#expungeFolder(MailboxConnection, String)` or `IMAPOperations#delete(MailboxConnection, String, long)` is executed. This operation targets a single email.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Mailbox Folder a| String |  Mailbox folder where the emails are going to be marked as deleted |  `INBOX` |
| Email ID a| Number |  Email ID Number of the email to mark as deleted. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<imap>>

==== Throws
* EMAIL:EMAIL_NOT_FOUND
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY
* EMAIL:RETRY_EXHAUSTED


[[markAsRead]]
=== Mark As Read
`<email:mark-as-read>`


Marks a single email as `READ` changing its state in the specified mailbox folder. This operation can target a single email.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Mailbox Folder a| String |  Folder where the emails are going to be marked as read | `INBOX` |
| Email ID a| Number |  Email ID Number of the email to mark as read. |  | x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<imap>>

==== Throws
* EMAIL:EMAIL_NOT_FOUND
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY
* EMAIL:RETRY_EXHAUSTED


[[listPop3]]
=== List - POP3
`<email:list-pop3>`


Lists all the emails (with pagination) in the configured POP3 mailbox folder that matches the specified POP3 Matcher criteria. The POP3 protocol does not support finding a specific email from its UID in a folder to move or delete it, so a `deleteAfterRetrieve` parameter is available for deleting the emails from the server immediately after retrieval.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Mailbox Folder a| String |  Mailbox folder from which to fetch the emails |  INBOX |
| Match with a| <<pop3-matcher>> |  Email Matcher that gives the capability of filtering the retrieved emails |  |
| Delete After Retrieve a| Boolean |  Specifies whether to delete the returned emails after they are retrieved |  `false` |
| Page Size a| Number |  Size of the page used by the Paging Provider implementation for fetching the emails from the POP3 server |  `10` |
| Limit a| Number |  Maximum number of emails retrieved by the operation. Take into account that this limit applies only to the emails effectively retrieved by the operation (the emails that matched the `IMAPEmailPredicateBuilder` criteria) and doesn't imply any restriction over the number of emails that are retrieved from the mailbox server. |  -1 |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments | `NAME` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression that evaluates the operation's output. The expression outcome is stored in the *Target Variable*  |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Message of [<<StoredEmailContent>>] payload and [<<POP3EmailAttributes>>] attributes
|===

=== For Configurations
* <<pop3>>

==== Throws
* EMAIL:EMAIL_LIST
* EMAIL:ACCESSING_FOLDER
* EMAIL:CONNECTIVITY


[[send]]
=== Send
`<email:send>`


This operation sends an email message. The message is sent to all recipient  (`To`, `CC`, and `BCC`) addresses specified in the message.  The content of the message is some type of text (`text/plain`, `text/html`) and is composed of the body and its content type. If no content is specified then the incoming payload is converted into plain text if possible.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| From Address a| String |  The "From" address of the message sender. If not set, it defaults to the "From" address specified in the config. |  |
| To Addresses a| Array of String |  The recipient addresses of "To" (primary) type |  | x
| Cc Addresses a| Array of String |  The recipient addresses of "CC" (carbon copy) type |  |
| Bcc Addresses a| Array of String |  The recipient addresses of "BCC" (blind carbon copy) type |  |
| Reply To Addresses a| Array of String |  The email addresses to which to reply to this email |  |
| Subject a| String | The subject of the email |  [No Subject] |
| Headers a| Object | The headers that this email carries |  |
| Content a| Binary | Text body of the message, which can be in any format |  `#[payload]` |
| ContentType a| String |  Content Type of the body text. Example: "text/plain" |  |
| Encoding a| String |  The character encoding of the body. If it is configured, it overrides the one inferred from the body. |  |
| Attachments a| Object |  The attachments that are sent along with the email body |  |
| Content Transfer Encoding a| String |  Encoding used to indicate the type of transformation that is used to represent the body in an acceptable manner for transport. The value is case insensitive.  Known encodings:  BASE64, QUOTED-PRINTABLE, 8BIT, 7BIT, BINARY  |  `Base64` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===


=== For Configurations
* <<smtp>>

==== Throws
* EMAIL:SEND
* EMAIL:CONNECTIVITY
* EMAIL:RETRY_EXHAUSTED


== Sources

[[listener-imap]]
=== On New Email - IMAP
`<email:listener-imap>`


Retrieves all the emails from an IMAP mailbox folder, watermark can be enabled for polled items.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Folder a| String |  The name of the folder to poll emails from.  |  `INBOX` |
| Delete After Retrieve a| Boolean |  Specifies whether to delete the returned emails after they are retrieved |  `false` |
| Enable Watermark a| Boolean |  Specifies wether to apply watermark  to the polled emails. |  true |
| Imap Matcher a| <<imap-matcher>> |  A matcher to filter emails retrieved by this polling source. By default, already-read emails will be filtered. |  |
| Enable Remote Search a| Boolean |  If search filters should be resolved on the server side, set this value to `true`. The default is `false`, which means search filters are resolved on the client side. This is because some email servers are not fully compliant with `rfc-3501` search terms. Activating this feature diminishes traffic by reducing the number of emails sent to the client side for processing. |  `false` |
| Primary Node Only a| Boolean |  Whether to execute this source on the primary node only when running in cluster mode |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments | `NAME`  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<StoredEmailContent>>
| Attributes Type a| <<BaseEmailAttributes>>
|===

=== For Configurations
* <<imap>>



[[listener-pop3]]
=== On New Email - POP3
`<email:listener-pop3>`


Retrieves all the emails from an POP3 mailbox folder.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Folder a| String |  The name of the folder to poll emails from |  `INBOX` |
| Delete After Retrieve a| Boolean |  Specifies whether to delete the returned emails after they are retrieved |  `false` |
| Pop3 Matcher a| <<pop3-matcher>> |  A matcher to filter emails retrieved by this polling source |  |
| Primary Node Only a| Boolean |  Whether to execute this source on the primary node only when running in cluster mode |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Attachment Naming Strategy a| Enumeration, one of:

** NAME
** NAME_HEADERS
** NAME_HEADERS_SUBJECT |  Enables you to specify a strategy for how to name attachments | `NAME` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<StoredEmailContent>>
| Attributes Type a| <<BaseEmailAttributes>>
|===

=== For Configurations
* <<pop3>>


=== Types

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use |  |
|===

[[reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[PoolingProfile]]
=== Pooling Profile

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that can be active at one time. When maxActive is exceeded, the pool is said to be exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that can be idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to `WHEN_EXHAUSTED_WAIT`. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object can sit idle in the pool before it is eligible for eviction. When the value is a negative number, no objects are evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When this value is set to a negative number, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL | Specifies the behavior of the Mule component pool when the pool is exhausted. Possible values are: `WHEN_EXHAUSTED_FAIL`, which will throw a `NoSuchElementException`, `WHEN_EXHAUSTED_WAIT`, which will block by invoking `Object.wait(long)` until a new or idle object is available, or `WHEN_EXHAUSTED_GROW`, which will create a new Mule instance and return it, essentially making `maxActive` meaningless. If a positive `maxWait` value is supplied, it will block for, at most, that many milliseconds, after which a `NoSuchElementException` is thrown. If `maxThreadWait` is a negative value, it blocks indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL | Determines how components in a pool should be initialized. The possible values are: `INITIALISE_NONE` (loads no components into the pool on startup), `INITIALISE_ONE` (loads one initial component into the pool on startup), or `INITIALISE_ALL` (loads all components in the pool on startup) |  |
| Disabled a| Boolean | Whether pooling should be disabled |  |
|===

[[Tls]]
=== TlS

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store |  |
| Password a| String | The password used to protect the trust store |  |
| Type a| String | The type of store used |  |
| Algorithm a| String | The algorithm used by the trust store |  |
| Insecure a| Boolean | If `true`, no certificate validations are performed, which makes connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which is resolved relative to the current classpath and file system, if possible) of the key store |  |
| Type a| String | The type of store used |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key |  |
| Password a| String | The password used to protect the key store |  |
| Algorithm a| String | The algorithm used by the key store |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Verify only the last element of the certificate chain |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before) |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server cannot be reached or is busy |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present |  |
|===

[[crl-file]]
=== CRL File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[StoredEmailContent]]
=== Stored Email Content

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Body a| String |  |  | x
| Attachments a| Any |  |  | x
|===

[[BaseEmailAttributes]]
=== Base Email Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Number a| Number |  |  | x
| From Addresses a| Array of String |  |  | x
| To Addresses a| Array of String |  |  | x
| Cc Addresses a| Array of String |  |  | x
| Bcc Addresses a| Array of String |  |  | x
| Reply To Addresses a| Array of String |  |  | x
| Headers a| Object |  |  | x
| Subject a| String |  |  | x
| Received Date a| DateTime |  |  |
| Sent Date a| DateTime |  |  |
|===

[[imap-matcher]]
=== IMAP Matcher

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Seen a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE | Indicates whether to retrieve 'seen' or 'not seen' emails | `INCLUDE` |
| Answered a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE | Indicates whether to retrieve 'answered' or 'not answered' emails | `INCLUDE` |
| Deleted a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE | Indicates whether to retrieve 'marked as deleted' or 'not marked as deleted' emails | `INCLUDE` |
| Recent a| Enumeration, one of:

** REQUIRE
** INCLUDE
** EXCLUDE | Indicates whether to retrieve `recent` or `not recent` emails | `INCLUDE` |
| Received Since a| DateTime | Indicates the date after which to retrieve received emails |  |
| Received Until a| DateTime | Indicates the date until which to retrieve the received emails |  |
| Sent Since a| DateTime | Indicates the date after which to retrieve sent emails |  |
| Sent Until a| DateTime | Indicates the date until which to retrieve sent emails |  |
| Subject Regex a| String | Subject Regex to match with the wanted emails |  |
| From Regex a| String | From Email Address Regex to match with the wanted emails |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is `SHA-256`. | `SHA-256` |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if *Use secure hash* is `false`. |  |
| Object Store a| Object Store | The object store in which to store the redelivery counter for each message. |  |
|===

[[IMAPEmailAttributes]]
=== IMAP Email Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Flags a| <<EmailFlags>> |  |  | x
| Id a| String |  |  | x
| Number a| Number |  |  | x
| From Addresses a| Array of String |  |  | x
| To Addresses a| Array of String |  |  | x
| Cc Addresses a| Array of String |  |  | x
| Bcc Addresses a| Array of String |  |  | x
| Reply To Addresses a| Array of String |  |  | x
| Headers a| Object |  |  | x
| Subject a| String |  |  | x
| Received Date a| DateTime |  |  |
| Sent Date a| DateTime |  |  |
|===

[[EmailFlags]]
=== Email Flags

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Answered a| Boolean |  | false |
| Deleted a| Boolean |  | false |
| Draft a| Boolean |  | false |
| Recent a| Boolean |  | false |
| Seen a| Boolean |  | false |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable in Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances that are initially allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. | `100` |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. | `100` |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances that will be kept in memory. If more than that is required, content starts to buffer on disk.  |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[pop3-matcher]]
=== POP3 Matcher

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Received Since a| DateTime | Indicates since which date the received emails must be retrieved |  |
| Received Until a| DateTime | Indicates until which date the received emails must be retrieved |  |
| Sent Since a| DateTime | Indicates since which date the sent emails must be retrieved |  |
| Sent Until a| DateTime | Indicates until which date the sent emails must be retrieved |  |
| Subject Regex a| String | Subject Regex to match with the wanted emails |  |
| From Regex a| String | From Email Address Regex to match with the wanted emails |  |
|===

[[POP3EmailAttributes]]
=== POP3 Email Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Id a| String |  |  | x
| Number a| Number |  |  | x
| From Addresses a| Array of String |  |  | x
| To Addresses a| Array of String |  |  | x
| Cc Addresses a| Array of String |  |  | x
| Bcc Addresses a| Array of String |  |  | x
| Reply To Addresses a| Array of String |  |  | x
| Headers a| Object |  |  | x
| Subject a| String |  |  | x
| Received Date a| DateTime |  |  |
| Sent Date a| DateTime |  |  |
|===

== See Also

* xref:release-notes::connector/connector-email.adoc[Email Connector Release Notes]
* https://www.mulesoft.com/exchange/org.mule.connectors/mule-email-connector/[Email Connector]
